[tool.poetry]
name = "demokratie-jetzt"
version = "0.1.0"
description = ""
authors = ["Rico Witschas <rico@99coaches.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
